--- a/views/layout.html
+++ b/views/layout.html
@@ -5,7 +5,7 @@
   <meta content="中文">
   <title>{% block title %}My Site{% endblock %}</title>
 </head>
-  <script src = "/jquery.min.js"></script>
+  <script src = "/jquery.js"></script>
 <body>
   {% block content %}{% endblock %}
 </body>
